# nova

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.override.yml  docker-compose.yml  flake.nix  main.py  nginx.conf  pyproject.toml
frontend/: README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js
frontend/src/components/: modelTile.svelte  wakeTile.svelte
frontend/src/lib/: store.ts
frontend/src/routes/: +layout.svelte  +page.ts
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/setup/: +page.svelte
src/: main.py
src/ai/: wakeword.py
src/router/: auth.py  models.py  settings.py  settings_store.py
src/router/hardware/: speakers.py
